--- a/MagicCollection/MagicCollection.vcxproj.filters
+++ b/MagicCollection/MagicCollection.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="MagicCardObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IName.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
