--- a/CollectorsFrontEnd/CollectorsFrontEnd.csproj
+++ b/CollectorsFrontEnd/CollectorsFrontEnd.csproj
@@ -119,6 +119,29 @@
     <Compile Include="CollectionViewer\Windows\ItemInterchanger.xaml.cs">
       <DependentUpon>ItemInterchanger.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IComponent.cs" />
+    <Compile Include="IDataModel.cs" />
+    <Compile Include="InterfaceModels\CollectionModel.cs" />
+    <Compile Include="InterfaceModels\CardModel.cs" />
+    <Compile Include="InterfaceModels\ServerInterfaceModel.cs" />
+    <Compile Include="Interfaces\CompCollectionsOverview.xaml.cs">
+      <DependentUpon>CompCollectionsOverview.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\CompCollectionView.xaml.cs">
+      <DependentUpon>CompCollectionView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\StoreFrontMain.xaml.cs">
+      <DependentUpon>StoreFrontMain.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\Subs\CompSubAddItemWindow.xaml.cs">
+      <DependentUpon>CompSubAddItemWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\Subs\CompSubGeneralization.xaml.cs">
+      <DependentUpon>CompSubGeneralization.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Interfaces\Subs\CompSubItemDisplayer.xaml.cs">
+      <DependentUpon>CompSubItemDisplayer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ServerIFace.cs" />
     <Page Include="CollectionViewer\Windows\ItemAttributesChanger\ItemAttributesChanger.xaml">
       <SubType>Designer</SubType>
@@ -149,6 +172,30 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CollectionViewer\Windows\ItemInterchanger.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\CompCollectionsOverview.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\CompCollectionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\StoreFrontMain.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\Subs\CompSubAddItemWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\Subs\CompSubGeneralization.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\Subs\CompSubItemDisplayer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -210,6 +257,7 @@
       <Name>ServerInterface</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
