--- a/MagicCollection/MagicCollection.vcxproj
+++ b/MagicCollection/MagicCollection.vcxproj
@@ -158,7 +158,9 @@
     <ClCompile Include="CollectionObject.cpp" />
     <ClCompile Include="CollectionSource.cpp" />
     <ClCompile Include="jsoncpp.cpp" />
-    <ClCompile Include="JSONImporter.cpp" />
+    <ClCompile Include="JSONImporter.cpp">
+      <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
+    </ClCompile>
     <ClCompile Include="MagicCardObject.cpp" />
     <ClCompile Include="MagicCollection.cpp" />
     <ClCompile Include="ServerIFace.cpp" />
