--- a/CollectorsFrontEnd/CollectorsFrontEnd.csproj
+++ b/CollectorsFrontEnd/CollectorsFrontEnd.csproj
@@ -121,6 +121,9 @@
     <Compile Include="Interfaces\Subs\CompSubAttributeChanger.xaml.cs">
       <DependentUpon>CompSubAttributeChanger.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\Subs\CompSubBulkEdits.xaml.cs">
+      <DependentUpon>CompSubBulkEdits.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces\Subs\CompSubCardDisplayer.xaml.cs">
       <DependentUpon>CompSubCardDisplayer.xaml</DependentUpon>
     </Compile>
@@ -159,6 +162,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Interfaces\Subs\CompSubAttributeChanger.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Interfaces\Subs\CompSubBulkEdits.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
